[package]
name = "rubik"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = {version = "1.13.0", features = ["std"]}
chrono = "0.4.39"
futures = "0.3.31"
tokio = {version = "1.43.0", features = ["rt", "time"], default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[features]
default = ["v1"]
v1 = []
v2 = []